<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.goal.GoalActivity">

    <com.marcinmoskala.arcseekbar.ArcSeekBar
        android:id="@+id/seek_goal"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter"
        app:progress="1"
        app:progressBackgroundWidth="20dp"
        app:progressColor="@color/colorPrimaryDark"
        app:progressWidth="30dp"
        app:roundEdges="true" />

    <TextView
        android:id="@+id/set_your_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/set_your_goal"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_0"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_your_goal" />

    <TextView
        android:id="@+id/text_view_min"
        style="@style/TextStyleTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/min"
        app:layout_constraintBottom_toBottomOf="@+id/seek_goal"
        app:layout_constraintEnd_toStartOf="@+id/seek_goal" />

    <TextView
        android:id="@+id/text_view_max"
        style="@style/TextStyleTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/max"
        app:layout_constraintBottom_toBottomOf="@+id/seek_goal"
        app:layout_constraintStart_toEndOf="@+id/seek_goal" />

</android.support.constraint.ConstraintLayout>