<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.txusballesteros.widgets.FitChart
                android:id="@+id/fit_large"
                app:valueStrokeColor="#8cacff"
                app:backStrokeColor="#e5eefb"
                android:layout_width="162dp"
                android:layout_height="162dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.txusballesteros.widgets.FitChart
                android:id="@+id/fit_middle"
                app:valueStrokeColor="#6ae3b2"
                app:backStrokeColor="#e6f8f0"
                android:layout_width="122dp"
                android:layout_height="122dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.txusballesteros.widgets.FitChart
                android:id="@+id/fit_small"
                app:valueStrokeColor="#ff7e89"
                app:backStrokeColor="#faf2f3"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_time"
                style="@style/TextStyleTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="20.12.1998" />

            <TextView
                android:id="@+id/text_view_cur_step"
                style="@style/TextStyleTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2000 / 843 steps" />

            <TextView
                android:id="@+id/text_walk"
                style="@style/TextStyleDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/walk"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fit_large"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_aerobic"
                style="@style/TextStyleDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/aerobic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fit_large"
                app:layout_constraintStart_toStartOf="@+id/fit_large" />

            <TextView
                android:id="@+id/text_run"
                style="@style/TextStyleDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:text="@string/run"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fit_large" />

            <TextView
                android:id="@+id/text_view_walk"
                style="@style/TextStyleTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/text_walk"
                app:layout_constraintEnd_toStartOf="@+id/fit_large"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="600" />

            <TextView
                android:id="@+id/text_view_aerobic"
                style="@style/TextStyleTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/text_aerobic"
                app:layout_constraintEnd_toEndOf="@+id/fit_large"
                app:layout_constraintStart_toStartOf="@+id/fit_large"
                tools:text="1460" />

            <TextView
                android:id="@+id/text_view_run"
                style="@style/TextStyleTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/text_run"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fit_large"
                tools:text="240" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>